--- a/custom_components/xiaomi_miot/translations/zh-Hans.json
+++ b/custom_components/xiaomi_miot/translations/zh-Hans.json
@@ -30,7 +30,7 @@
             },
             "cloud_filter": {
                 "title": "筛选设备",
-                "description": "你可以通过筛选只集成想要的设备。在排除模式中，如果不勾选列表任何中的任何选项，则相当于包含所有选项。如果想集成网关子设备，请直接选择子设备，接入网关不会自动集成子设备。\n{tip}",
+                "description": "你可以通过筛选只接入想要的设备。在排除模式中，如果不勾选任何设备，则相当于接入所有设备。如果想集成网关子设备，请直接选择子设备，接入网关不会自动集成子设备。\n{tip}",
                 "data": {
                     "filter_model": "筛选设备型号",
                     "model_list": "设备型号列表",
@@ -93,7 +93,7 @@
             },
             "cloud_filter": {
                 "title": "筛选设备",
-                "description": "你可以通过筛选只集成想要的设备。在排除模式中，如果不勾选列表任何中的任何选项，则相当于包含所有选项。如果想集成网关子设备，请直接选择子设备，接入网关不会自动集成子设备。\n{tip}",
+                "description": "你可以通过筛选只接入想要的设备。在排除模式中，如果不勾选任何设备，则相当于接入所有设备。如果想集成网关子设备，请直接选择子设备，接入网关不会自动集成子设备。\n{tip}",
                 "data": {
                     "filter_model": "筛选设备型号",
                     "model_list": "设备型号列表",
